# py_webauthn

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  app.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
django_demo/: README.md  manage.py  runserver.bash
examples/: authentication.py  options.py  registration.py  verification.py
flask_demo/: app.py  context.py  create_db.py  models.py  py_webauthn.env.example  requirements.txt  util.py
source/: advanced_use_cases.md  api_reference.md  authentication.md  conf.py  debug.md  foobar.md  hello.md  index.md  index.rst  index.rst.old  intro.md  overview.md  passkeys.md  registration.md
templates/: base.html  home.html
tests/: test_base64url_bytes.py  test_bytes_subclass_support.py  test_bytes_to_base64url.py  test_decode_credential_public_key.py  test_generate_authentication_options.py  test_generate_challenge.py  test_generate_registration_options.py  test_options_to_json.py  test_options_to_json_dict.py  test_parse_authentication_credential_json.py  test_parse_authentication_options.py  test_parse_authenticator_data.py  test_parse_backup_flags.py  test_parse_client_data_json.py  test_parse_registration_credential_json.py  test_parse_registration_options_json.py  test_structs.py  test_tpm_parse_cert_info.py  test_util.py  test_validate_certificate_chain.py  test_validate_expected_origin.py  test_verify_authentication_response.py  test_verify_registration_response.py  test_verify_registration_response_apple.py  (+8 more)
(+85 files in other folders)
